# prossh

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README.ru.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  DEVELOPMENT.ru.md  DEVELOPMENT.zh.md  OAUTH_SETUP.md  USER_GUIDE.md  USER_GUIDE.ru.md  USER_GUIDE.zh.md
packaging/arch/: PKGBUILD
scripts/: set-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: ssh_probe.rs  ssh_probe_mismatch.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  themes.rs
src-tauri/src/commands/: known_hosts.rs  misc.rs  mod.rs  pty.rs  scripts.rs  secrets.rs  sessions.rs  settings.rs  sftp.rs  ssh.rs  sync.rs  system.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/known_hosts/: mod.rs
src-tauri/src/secrets/: file_backend.rs  mod.rs
src-tauri/src/sessions/: color_profiles.rs  mod.rs  repo.rs  scripts.rs
src-tauri/src/sftp/: client.rs  mod.rs  transfer.rs
src-tauri/src/ssh/: auth.rs  config.rs  forward.rs  gate.rs  import_moba.rs  import_putty.rs  mod.rs  pty.rs
src-tauri/src/sync/: crypto.rs  drive.rs  mod.rs  oauth.rs  payload.rs  runtime.rs
src-tauri/wix/: ru-RU.wxl  zh-CN.wxl
src/api/: knownHosts.ts  pty.ts  scripts.ts  secrets.ts  sessions.ts  settings.ts  sftp.ts  ssh.ts  sync.ts  system.ts  types.ts
src/components/dialogs/: ConnectionDialog.tsx  CopyToServerDialog.tsx  CredentialsDialog.tsx  HostKeyPromptDialog.tsx  ImportMobaDialog.tsx  ImportPuttyDialog.tsx  ImportSshConfigDialog.tsx  PassphraseDialog.tsx  ScriptEditorDialog.tsx  SyncPassphraseDialog.tsx  VaultPasswordDialog.tsx
src/components/known-hosts/: KnownHostsPanel.tsx
src/components/layout/: AppShell.tsx  StatusBar.tsx  SystemWidgets.tsx  TitleBar.tsx
src/components/palette/: CommandPalette.tsx
src/components/panes/: PaneLeafView.tsx  SplitPane.tsx
src/components/sessions/: SessionDetails.tsx  SessionsSidebar.tsx
src/components/settings/: SettingsDialog.tsx
src/components/sftp/: SftpExplorer.tsx
src/components/sidebar/: FilesBrowser.tsx  Sidebar.tsx  TransferQueue.tsx
src/components/tabs/: TabBar.tsx
src/components/terminal/: TerminalView.tsx
src/components/ui/: AppLogo.tsx  Button.tsx  DraggableDialogContent.tsx  Input.tsx  Label.tsx  OsIcon.tsx  Select.tsx
src/hooks/: useAppVersion.ts  useDialogDrag.ts  useXterm.ts
src/i18n/: en.json  index.ts  ru.json  zh.json
src/lib/: cn.ts
src/stores/: knownHosts.ts  scripts.ts  sessions.ts  sidebar.ts  tabs.ts  theme.ts  transfers.ts
src/styles/: globals.css
